tests/transpiler/x/cpp/exists_builtin.error
compile: exit status 1
/workspace/mochi/tests/transpiler/x/cpp/exists_builtin.cpp: In lambda function:
/workspace/mochi/tests/transpiler/x/cpp/exists_builtin.cpp:7:36: error: template argument 1 is invalid
    7 | auto flag = (!([]{ std::vector<auto> __items;
      |                                    ^
/workspace/mochi/tests/transpiler/x/cpp/exists_builtin.cpp:7:36: error: template argument 2 is invalid
/workspace/mochi/tests/transpiler/x/cpp/exists_builtin.cpp:10:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
   10 |         __items.push_back(x);
      |                 ^~~~~~~~~
/workspace/mochi/tests/transpiler/x/cpp/exists_builtin.cpp: At global scope:
/workspace/mochi/tests/transpiler/x/cpp/exists_builtin.cpp:13:22: error: request for member ‘empty’ in ‘<lambda closure object><lambda()>().<lambda()>()’, which is of non-class type ‘int’
   13 | return __items; }()).empty());
      |                      ^~~~~
