tests/transpiler/x/cpp/exists_builtin.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-20 21:01:18 GMT+7
#include <iostream>
#include <string>
#include <vector>

auto data = std::vector{1, 2};
auto flag = (!([]{ std::vector<auto> __items;
for (auto x : data) {
    if((x == 1)) {
        __items.push_back(x);
    }
}
return __items; }()).empty());

int main() {
    std::cout << std::boolalpha << flag << std::endl;
    return 0;
}
